--- a/scrape/package.json
+++ b/scrape/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "LiveScript": "^1.3.1",
     "cheerio": "^0.18.0",
+    "decompose-url": "^0.1.2",
     "prelude-ls": "^1.1.1",
     "q": "^1.1.2",
     "q-io": "^1.11.6",
